--- a/buildprocess/ci-values.yml
+++ b/buildprocess/ci-values.yml
@@ -79,6 +79,7 @@ terriamap:
           ca: "Català"
           cs: "Čeština"
           ja: "日本語"
+          pt: "Português"
           pt_BR: "Português do Brasil"
           it: "Italiano"
           fr: "Français"
@@ -89,7 +90,7 @@ terriamap:
       helpContent:
         - title: "Getting started with the map"
           itemName: gettingstarted
-          markdownText: "## Getting started with the map\n\nIf you''re new to the map or using spatial data, our Getting Started video quickly covers the basic functionality you''ll need to use to add and interrogate data sets.\n\nIf you don''t have time to watch the video, we suggest exploring the following areas:\n\n1. Search for a location to quickly find an area of interest\n2. Use ''Explore map data'' to view the catalogue of available data sets and add them to the map\n3. Interact with the data layer, including opacity and toggling on and off on the left in your workbench\n4. Click on the data on the map to view more detailed data, including the raw data\n5. Change your basemap using options in ''Map Settings'' to help make some data sets more visible\n6. Zoom and change your view, including tilting the view angle using the controls on the right-hand side of the screen"
+          markdownText: "## Getting started with the map\n\nIf you''re new to the map or using spatial data, our Getting Started video quickly covers the basic functionality you''ll need to use to add and interrogate data sets.\n\nIf you don''t have time to watch the video, we suggest exploring the following areas:\n\n1. Search for a location to quickly find an area of interest\n2. Use ''Explore data'' to view the catalogue of available data sets and add them to the map\n3. Interact with the data layer, including opacity and toggling on and off on the left in your workbench\n4. Click on the data on the map to view more detailed data, including the raw data\n5. Change your basemap using options in ''Map Settings'' to help make some data sets more visible\n6. Zoom and change your view, including tilting the view angle using the controls on the right-hand side of the screen"
           icon: "video"
           videoUrl: "https://www.youtube-nocookie.com/embed/FjSxaviSLhc"
           placeholderImage: "https://img.youtube.com/vi/FjSxaviSLhc/maxresdefault.jpg"
@@ -106,7 +107,7 @@ terriamap:
                 - markdownDescription: The search is at the top of the workbench on the left.
                   title: Search for a location to find an area of interest
                 - markdownDescription: You can view the catalogue at any time
-                  title: Use "Explore map data" to view data catalogue
+                  title: Use "Explore data" to view data catalogue
                 - markdownDescription: Find a dataset of interest
                   title: Search for data or browse catalogue
                 - title: >-
