--- a/project.inlang/settings.json
+++ b/project.inlang/settings.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://inlang.com/schema/project-settings",
   "sourceLanguageTag": "en",
-  "languageTags": ["en", "ar", "ca", "cs", "de", "el"],
+  "languageTags": ["en", "pt", "ar", "ca", "cs", "de", "el"],
   "modules": [
     "https://cdn.jsdelivr.net/npm/@inlang/plugin-i18next@4/dist/index.js",
     "https://cdn.jsdelivr.net/npm/@inlang/message-lint-rule-empty-pattern@latest/dist/index.js",
